typescript/checker/tests/conformance/expressions/newOperator/newOperatorErrorCases_noImplicitAny.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            322,
        ),
        hi: BytePos(
            330,
        ),
        ctxt: #0,
    },
    callee: Function(
        Function {
            span: Span {
                lo: BytePos(
                    265,
                ),
                hi: BytePos(
                    317,
                ),
                ctxt: #0,
            },
            type_params: None,
            params: [
                Ident(
                    Ident {
                        span: Span {
                            lo: BytePos(
                                283,
                            ),
                            hi: BytePos(
                                287,
                            ),
                            ctxt: #0,
                        },
                        sym: Atom('this' type=static),
                        type_ann: Some(
                            TsTypeAnn {
                                span: Span {
                                    lo: BytePos(
                                        287,
                                    ),
                                    hi: BytePos(
                                        293,
                                    ),
                                    ctxt: #0,
                                },
                                type_ann: TsKeywordType(
                                    TsKeywordType {
                                        span: Span {
                                            lo: BytePos(
                                                289,
                                            ),
                                            hi: BytePos(
                                                293,
                                            ),
                                            ctxt: #0,
                                        },
                                        kind: TsVoidKeyword,
                                    },
                                ),
                            },
                        ),
                        optional: false,
                    },
                ),
            ],
            ret_ty: Keyword(
                TsKeywordType {
                    span: Span {
                        lo: BytePos(
                            296,
                        ),
                        hi: BytePos(
                            302,
                        ),
                        ctxt: #0,
                    },
                    kind: TsNumberKeyword,
                },
            ),
        },
    ),
}
 --> $DIR/tests/conformance/expressions/newOperator/newOperatorErrorCases_noImplicitAny.ts:4:5
  |
4 | new fnNumber(); // Error
  |     ^^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            385,
        ),
        hi: BytePos(
            391,
        ),
        ctxt: #0,
    },
    callee: Function(
        Function {
            span: Span {
                lo: BytePos(
                    344,
                ),
                hi: BytePos(
                    380,
                ),
                ctxt: #0,
            },
            type_params: None,
            params: [
                Ident(
                    Ident {
                        span: Span {
                            lo: BytePos(
                                360,
                            ),
                            hi: BytePos(
                                364,
                            ),
                            ctxt: #0,
                        },
                        sym: Atom('this' type=static),
                        type_ann: Some(
                            TsTypeAnn {
                                span: Span {
                                    lo: BytePos(
                                        364,
                                    ),
                                    hi: BytePos(
                                        370,
                                    ),
                                    ctxt: #0,
                                },
                                type_ann: TsKeywordType(
                                    TsKeywordType {
                                        span: Span {
                                            lo: BytePos(
                                                366,
                                            ),
                                            hi: BytePos(
                                                370,
                                            ),
                                            ctxt: #0,
                                        },
                                        kind: TsVoidKeyword,
                                    },
                                ),
                            },
                        ),
                        optional: false,
                    },
                ),
            ],
            ret_ty: Keyword(
                TsKeywordType {
                    span: Span {
                        lo: BytePos(
                            373,
                        ),
                        hi: BytePos(
                            377,
                        ),
                        ctxt: #0,
                    },
                    kind: TsVoidKeyword,
                },
            ),
        },
    ),
}
 --> $DIR/tests/conformance/expressions/newOperator/newOperatorErrorCases_noImplicitAny.ts:7:5
  |
7 | new fnVoid(); // Error
  |     ^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            448,
        ),
        hi: BytePos(
            466,
        ),
        ctxt: #0,
    },
    callee: Function(
        Function {
            span: Span {
                lo: BytePos(
                    405,
                ),
                hi: BytePos(
                    443,
                ),
                ctxt: #0,
            },
            type_params: None,
            params: [],
            ret_ty: Keyword(
                TsKeywordType {
                    span: Span {
                        lo: BytePos(
                            436,
                        ),
                        hi: BytePos(
                            440,
                        ),
                        ctxt: #0,
                    },
                    kind: TsVoidKeyword,
                },
            ),
        },
    ),
}
  --> $DIR/tests/conformance/expressions/newOperator/newOperatorErrorCases_noImplicitAny.ts:10:5
   |
10 | new functionVoidNoThis(); // Error
   |     ^^^^^^^^^^^^^^^^^^

